Fixes tooltip z-index

--- a/source/sass/components/_tooltips.scss
+++ b/source/sass/components/_tooltips.scss
@@ -26,9 +26,9 @@
     border-width: 4px 6px 0 6px;
     border-style: solid;
     border-color: $grey-dark transparent transparent transparent;
-    z-index: 100;
     pointer-events: none;
     opacity: 0;
+    z-index: 100;
   }
 
   &::after {
@@ -54,6 +54,7 @@
     -webkit-nbsp-mode: space;
     pointer-events: none;
     opacity: 0;
+    z-index: 100; // fixes tooltip over other elements
   }
 
   &.top {
